--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
-joblib~=1.5.2
-streamlit~=1.50.0
-scikit-learn~=1.6.1
-nltk~=3.9.2
-matplotlib~=3.9.4
-pandas~=2.3.3
-spacy~=3.8.11
-kagglehub~=0.3.13
-protobuf~=6.33.1
+streamlit
+pandas
 numpy
 scipy
+matplotlib
+nltk
+spacy
 scikit-learn
 pyLDAvis
+joblib
+kagglehub
+protobuf<=5.29.0
